# logseq-tmsh

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-15-logseq-timesheet.md
docs/superpowers/specs/: 2026-04-15-logseq-timesheet-design.md
logseq_tmsh/: cli.py  config.py  extractor.py  filters.py  formatters.py  models.py  parser.py
tests/: test_extractor.py  test_filters.py  test_formatters.py  test_integration.py  test_parser.py
tests/fixtures/: malformed_clock.md  midnight_cross.md  multi_clock.md  nested_task.md  no_logbook.md  override_no_completed.md  simple_task.md  tags_refs.md  time_override.md
tests/fixtures/integration/: 2024_01_10.md  2026_04_14.md  2026_04_15.md
