[project]
name = "logseq-tmsh"
version = "0.1.0"
description = "Extract time-tracking data from LogSeq journal CLOCK entries"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
ltmsh = "logseq_tmsh.cli:app"

[project.urls]
Homepage = "https://github.com/odokoupil/logseq-tmsh"
Repository = "https://github.com/odokoupil/logseq-tmsh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
