[project]
name = "logseq-tmsh"
version = "0.2.1"
description = "Extract time-tracking data from LogSeq journal CLOCK entries"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Otakar Dokoupil", email = "Otakar.Dokoupil@oriflame.com"},
]
keywords = ["logseq", "time-tracking", "cli", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.scripts]
ltmsh = "logseq_tmsh.cli:app"

[project.urls]
Homepage = "https://github.com/xdoko01/logseq-tmsh"
Repository = "https://github.com/xdoko01/logseq-tmsh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
